<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2018 Kaushik N. Sanji
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BaseCardLightStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground">

        <include
            android:id="@+id/include_all_product_item"
            style="@style/ConstraintTopCenterHorizontalStyle"
            layout="@layout/layout_all_product_item" />

        <View
            android:id="@+id/divider_sales_list_item_section_1"
            style="@style/SalesListItemDividerStyle"
            app:layout_constraintTop_toBottomOf="@+id/include_all_product_item" />

        <TextView
            android:id="@+id/text_sales_list_item_total_available"
            style="@style/ConstraintCenterHorizontalStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sales_list_item_vertical_margin"
            android:gravity="center"
            android:textColor="@color/salesListItemTotalAvailableColor"
            android:textSize="@dimen/text_sales_list_item_total_available_size"
            app:layout_constrainedWidth="true"
            app:layout_constraintTop_toBottomOf="@+id/divider_sales_list_item_section_1"
            tools:text="@string/sales_list_item_total_available" />

        <View
            android:id="@+id/divider_sales_list_item_section_2"
            style="@style/SalesListItemDividerStyle"
            android:layout_marginTop="@dimen/sales_list_item_vertical_margin"
            app:layout_constraintTop_toBottomOf="@+id/text_sales_list_item_total_available" />

        <TextView
            android:id="@+id/text_sales_list_item_top_supplier_title"
            style="@style/ConstraintCenterHorizontalStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sales_list_item_vertical_margin"
            android:drawableLeft="@drawable/ic_main_tab_supplier_default"
            android:drawablePadding="@dimen/sales_list_item_top_supplier_title_drawable_padding"
            android:drawableStart="@drawable/ic_main_tab_supplier_default"
            android:text="@string/sales_list_item_top_supplier_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@+id/divider_sales_list_item_section_2" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_sales_list_item_center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/text_sales_list_item_supplier_name_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_sales_list_item_supplier_name_code_margin"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_sales_list_item_supplier_name_code_size"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toStartOf="@+id/guideline_sales_list_item_center_vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline_sales_list_item_center_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_sales_list_item_top_supplier_title"
            tools:text="@string/sales_list_item_supplier_name_code_format" />

        <TextView
            android:id="@+id/text_sales_list_item_supplier_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sales_list_item_vertical_margin"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textStyle="italic"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="@+id/text_sales_list_item_available_label"
            app:layout_constraintEnd_toStartOf="@+id/guideline_sales_list_item_center_vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline_sales_list_item_center_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_sales_list_item_supplier_name_code"
            tools:text="@string/sales_list_item_supplier_selling_price" />

        <TextView
            android:id="@+id/text_sales_list_item_supplier_availability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_sales_list_item_supplier_availability_margin"
            android:gravity="center"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/salesListItemSupplierAvailabilityColor"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/guideline_sales_list_item_center_vertical"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline_sales_list_item_center_vertical"
            app:layout_constraintTop_toBottomOf="@+id/text_sales_list_item_top_supplier_title"
            tools:text="88" />

        <TextView
            android:id="@+id/text_sales_list_item_available_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sales_list_item_label_available"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintEnd_toEndOf="@+id/text_sales_list_item_supplier_availability"
            app:layout_constraintLeft_toLeftOf="@+id/text_sales_list_item_supplier_availability"
            app:layout_constraintRight_toRightOf="@+id/text_sales_list_item_supplier_availability"
            app:layout_constraintStart_toStartOf="@+id/text_sales_list_item_supplier_availability"
            app:layout_constraintTop_toBottomOf="@+id/text_sales_list_item_supplier_availability" />

        <View
            android:id="@+id/divider_sales_list_item_action_buttons"
            style="@style/SalesListItemDividerStyle"
            android:layout_marginTop="@dimen/sales_list_item_action_buttons_vertical_margin"
            app:layout_constraintTop_toBottomOf="@+id/text_sales_list_item_available_label" />

        <Button
            android:id="@+id/btn_sales_list_item_delete"
            style="@style/MaterialLabelButtonStyle"
            android:layout_marginTop="@dimen/sales_list_item_action_buttons_vertical_margin"
            android:drawableLeft="@drawable/ic_sales_list_item_delete"
            android:drawablePadding="@dimen/sales_list_item_action_buttons_drawable_padding"
            android:drawableStart="@drawable/ic_sales_list_item_delete"
            android:text="@string/sales_list_item_action_delete_product"
            android:textColor="@color/salesListItemButtonLabelDeleteColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_sales_list_item_action_buttons" />

        <Button
            android:id="@+id/btn_sales_list_item_sell"
            style="@style/MaterialLabelButtonStyle"
            android:layout_marginLeft="@dimen/sales_list_item_action_buttons_horizontal_margin"
            android:layout_marginStart="@dimen/sales_list_item_action_buttons_horizontal_margin"
            android:layout_marginTop="@dimen/sales_list_item_action_buttons_vertical_margin"
            android:drawableLeft="@drawable/ic_sales_list_item_ship"
            android:drawablePadding="@dimen/sales_list_item_action_buttons_drawable_padding"
            android:drawableStart="@drawable/ic_sales_list_item_ship"
            android:text="@string/sales_list_item_action_sell"
            android:textColor="@color/salesListItemButtonLabelSellColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/btn_sales_list_item_delete"
            app:layout_constraintStart_toEndOf="@+id/btn_sales_list_item_delete"
            app:layout_constraintTop_toBottomOf="@+id/divider_sales_list_item_action_buttons" />

        <android.support.constraint.Group
            android:id="@+id/group_sales_list_item_top_supplier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="text_sales_list_item_top_supplier_title, text_sales_list_item_supplier_name_code, text_sales_list_item_supplier_availability, text_sales_list_item_available_label, text_sales_list_item_supplier_price, divider_sales_list_item_section_2, btn_sales_list_item_sell" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>